Bug 321437 - Severe performance problems with thumbnail view using a Samba share
Summary: Severe performance problems with thumbnail view using a Samba share
Status: RESOLVED FIXED
Alias: None
Product: kphotoalbum
Classification: Applications
Component: Thumbnail Viewer (other bugs)
Version First Reported In: GIT master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KPhotoAlbum Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-20 17:05 UTC by Johannes Zarl-Zierl
Modified: 2013-08-24 22:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes Zarl-Zierl 2013-06-20 17:05:59 UTC
When using an image directory on a Samba share, performance of the Thumbnail view severely suffers even when the Samba share is using a fast (~1Gbit/s) connection.

In the case at hand (reported on the mailing list), the problem seems to lie in heavy access on the ${IMAGEDIR}/.thumbnails/thumb-0. Moving the thumbnails directory to a local directory fixes the problem.

Problem description:
> When I click on one of the thumbnails it takes a long time until the image is
> displayed. Selecting indivdual thumbnails for annotation is nearly impossible.
> Right now I tried to open the context menu by right clicking on a thumbnail.
> It took 38 secondes until the context menu window appeared. After 'Show
> Thumbnails' everything is unusablely slow, but the duration of the delays seem
> to vary a bit. The indicator for background jobs is light grey all the time.
Comment 1 Johannes Zarl-Zierl 2013-06-29 18:31:38 UTC
Note to self: mapping the thumb-X files to memory (and keeping them there) should fix the problem.
Comment 2 Johannes Zarl-Zierl 2013-08-24 22:19:13 UTC
Git commit 05462de570819f561df2418d102a8f2fc8cf4a8f by Johannes Zarl.
Committed on 22/08/2013 at 21:21.
Pushed by johanneszarl into branch 'master'.

Implement caching for thumbnail files.

M  +59   -12   ImageManager/ThumbnailCache.cpp
M  +10   -0    ImageManager/ThumbnailCache.h

http://commits.kde.org/kphotoalbum/05462de570819f561df2418d102a8f2fc8cf4a8f