Implement caching for thumbnail files.

BUG: 321437